Добавлена заглушка ожидания. Добавлен пиксельный шрифт. Таймер.

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,13 @@
   href="<%= BASE_URL %>logo.png"
 />
 
-<title>PixSynt</title>
+<style>
+html, body {
+  background-color: #102027;
+}
+</style>
+
+<title>PIXSYNT</title>
 </head>
 
 <% if (process.env.NODE_ENV === 'production') { %>
